tests/pos/single-additional-import.scala
// scalac: -Yimports:scala.annotation
class annotation extends Annotation
