tests/neg/yimports-nosuch.scala
// scalac: -Yimports:skala,scala.Predeff
//
class C
// nopos-error
// nopos-error
